--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
     <!--    Aqui iran templates con las distintas pantallas (zonas) del juego     -->
     <template id="pantallaJuego1">
         <div id="personaje1"></div>
+        <div id="contenedor-explosion"></div>
         <div class="estructura" id="suelo1-1"></div>
         <div class="estructura" id="suelo1-2"></div>
+        <div class="estructura" id="suelo1-3"></div>
+        <div class="estructura" id="suelo1-4"></div>
+        <div class="estructura" id="suelo1-5"></div>
+        <div class="estructura" id="suelo1-6"></div>
+        <div class="estructura" id="suelo1-7"></div>
+        <div class="estructura" id="suelo1-8"></div>
+        <div class="trampa" id="trampa1-1"></div>
+        <div class="trampa" id="trampa1-2"></div>
+        <div class="trampa" id="trampa1-3"></div>
+        <div class="estrella" id="estrella1-1"></div>
+        <div class="estrella" id="estrella1-2"></div>
+        <div class="estrella" id="estrella1-3"></div>
     </template>
 
     <template id="pantallaDificultad">
